--- a/css/styles.css
+++ b/css/styles.css
@@ -399,7 +399,7 @@ h2 {
 
 .walletconnect-modal__base {
     max-width: 440px !important;
-    color: #fff;
+    color: #fff !important;
     background-color: #21193a !important;
     top: 54% !important;
 }
@@ -411,13 +411,13 @@ h2 {
 }
 
 .walletconnect-qrcode__text {
-    color: #fff;
+    color: #fff !important;
 }
 
 .walletconnect-modal__header,
 .walletconnect-modal__mobile__toggle {
     position: absolute !important;
-    top: -8% !important;
+    top: -7.5% !important;
 }
 
 .walletconnect-modal__mobile__toggle {
@@ -435,7 +435,7 @@ h2 {
 .walletconnect-modal__mobile__toggle.right__selected a:nth-of-type(1),
 .walletconnect-modal__mobile__toggle a:nth-of-type(2),
 .walletconnect-modal__mobile__toggle a {
-    background-color: transparent;
+    background-color: transparent !important;
 }
 
 .walletconnect-modal__mobile__toggle.right__selected a:nth-of-type(2),
